--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,43 +1,206 @@
-:root {
-  --bg: #ffffff;
-  --text: #222;
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-[data-theme="dark"] {
-  --bg: #121212;
-  --text: #ffffff;
-}
 
-body {
-  background: var(--bg);
-  color: var(--text);
-  font-family: sans-serif;
+
+*{
+   font-family: "Roboto", sans-serif;
+}
+/*Contenido pricipal INICIO*/
+.container_main{
+  display: grid;
+  grid-template-columns: 4% auto;
+  height: 100%;
+  gap: 10px;
+}
+.nav-main{
+  box-shadow: 0px 0px 8px rgba(199, 199, 199, 0.568); 
+}
+.contenedor{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  position: relative;
   padding: 20px;
 }
 
-.task-item {
+.targetas_info{
+  background-color: aqua;
+  height: 46vh;
+}
+
+/* Agregar tareas*/
+#task-input{
+  position: relative;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+}
+
+#task-input input{
+  padding: 16px 8px;
+  border-top-left-radius: 12px;
+  border-end-start-radius: 12px;
+  background:rgba(249, 254, 255, 0.788);
+  width: 79% ;
+  border:  2px solid rgb(113, 194, 226);
+  transition:  0.30s ease-in-out;
+  font-size: 15px;
+  animation:  fadeUp 0.40s ease-in-out;
+}
+
+#addBtn{
+  position: relative;
+  background-color: rgb(255, 217, 0);
+  border-top-right-radius: 12px;
+  border-end-end-radius: 12px;
+  width: 10%;
+  cursor: pointer;
+}
+#taskList{
+  max-height: 400px;
+  overflow-y: auto;
+}
+#taskList::-webkit-scrollbar{
+  width: 4px;
+  height: 4px;
+}
+#taskList::-webkit-scrollbar-thumb{
+  background-color: #ffffff46;
+  transition: background 0.90s ease-in-out ;
+  border-radius: 10px;
+}
+#taskList::-webkit-scrollbar-thumb:hover{
+  background-color: #ffffffab;
+}
+#task-input i{
+ padding: 15px 18px;
+ font-size: 26px;
+ transition: 0.40s ease-in-out;
+ color: rgb(1, 63, 87);
+}
+#task-input{
+ animation:  fadeUp 0.80s ease-in-out;
+}
+
+#task-input i:hover{
+  transform: scale(1.04);
+}
+#task-input input:focus {
+  outline: none;
+  box-shadow: 0 4px 6px #b0d0ffd2;
+}
+.List_check{
+  padding: 20px;
+  border: 5px;
+  grid-column: 1 / span 2;
+
+}
+.task-item{
+  display: grid;
+  grid-template-columns: 2% 92% auto;
+  gap: 20px;
+  background: linear-gradient( to right, #e4fbff, #b4f0ff) ;
   padding: 12px;
+  font-size: 18px;
   margin-bottom: 8px;
-  background: var(--card);
   border-radius: 8px;
+}
+.editar_item{
+  grid-column: 1 / span 3;
 }
 
 .task-text {
   cursor: pointer;
+  flex-grow: 5;
 }
 
 .task-text.done {
   text-decoration: line-through;
   opacity: 0.6;
+  animation: popCkeck2 0.40s ease-in-out;
 }
 
+.check{
+  flex-shrink: 1;
+  width: 16px;
+  height: 16px;
+}
+.check.done{
+  animation: popCkeck 0.40s ease-in-out;
+}
+.check:checked {
+  border-color: #4ade80;
+  background: #4ade80;
+}
+
+
 .delete-btn {
-  background: transparent;
+  background: rebeccapurple;
   border: none;
+  border-radius: 5px;
   font-size: 18px;
   cursor: pointer;
-  color: red;
+  color: rgb(255, 0, 140);
+}
+
+/*Animaciones*/
+@keyframes fadeUp{
+  from{
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px)
+
+  }
+}
+@keyframes deleteItem {
+  from{
+    opacity: 1;
+    transform: translateX(-500px);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(0)
+  }
+}
+@keyframes popCkeck{
+  0% {transform: scale(1);}
+  40% {transform: scale(1.50);}
+  100% {transform: scale(1);}
+}
+@keyframes popCkeck2{
+  40% {transform: scale(1.02);}
+}
+
+
+/*Resposing*/
+
+@media (max-width: 470px){
+.contenedor{
+  gap: 0px;
+  grid-template-columns: repeat(1, 1fr);
+}
+#addBtn{
+  background-color: rgb(255, 217, 0);
+  width: auto;
+  cursor: pointer;
+}
+
+#task-input input{
+  width: 100%;
+}
+
+.targetas_info{
+  margin-top: 20px;
+  grid-column: 1 / span 2;
+}
+.List_check{
+  padding: 0px;
+  grid-column: 1 / span 2;
+}
+.task-item{
+  display: grid;
+  grid-template-columns: 4% 72% auto;
+}
+
 }
