--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -26,7 +26,68 @@
 .targetas_info{
   background-color: aqua;
   height: 46vh;
+  position: relative;
+  overflow: hidden;
 }
+
+
+.carousel {
+  width: 300px;
+  height: 410px;
+  padding: 60px 0;
+  display: flex;
+  gap: 20px;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  padding: 20px;
+  scrollbar-width: none;
+  perspective: 1200px;
+}
+
+.carousel::-webkit-scrollbar { display: none; }
+
+.card {
+  min-width: 180px;
+  height: 180px;
+  background: #ffffff;
+  box-shadow: 0 0 10px rgb(201, 201, 201);
+  padding: 20px;
+  border-radius: 18px;
+  box-shadow: 0 12px 25px rgba(0,0,0,.4);
+  transition: 
+     transform 0.4s ease,
+     opacity 0.4s ease,
+     filter 0.4s ease;
+}
+
+/* ESTADOS DINÁMICOS */
+.card.inactive-left {
+  transform: scale(0.8) rotateY(22deg);
+  opacity: 0.5;
+  filter: blur(1px);
+}
+
+.card.inactive-right {
+  transform: scale(0.8) rotateY(-22deg);
+  opacity: 0.5;
+  filter: blur(1px);
+}
+.card.active {
+  transform: scale(1.05) translateY(-20px);
+  opacity: 1;
+}
+
+.card.inactive-left {
+  transform: scale(0.8) rotateY(22deg);
+  opacity: 0.5;
+}
+
+.card.inactive-right {
+  transform: scale(0.8) rotateY(-22deg);
+  opacity: 0.5;
+}
+
+
 
 /* Agregar tareas*/
 #task-input{
