--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -9,18 +9,22 @@
 /*Contenido pricipal INICIO*/
 .container_main{
   display: grid;
-  grid-template-columns: 4% auto;
+  grid-template-columns: 10% auto;
   height: 100%;
   gap: 10px;
 }
 .nav-main{
   box-shadow: 0px 0px 8px rgba(199, 199, 199, 0.568); 
+  height: 100vh;
+  background-color: #040553;
 }
 .contenedor{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   position: relative;
   padding: 20px;
+  height: 93vh;
+  overflow-y: auto;
 }
 
 .targetas_info{
@@ -62,6 +66,7 @@
 .card {
   min-width: 200px;
   height: 240px;
+  cursor: pointer;
   background: #fff;
   padding: 20px;
   border-radius: 18px;
@@ -169,8 +174,8 @@
 
 .check{
   flex-shrink: 1;
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
 }
 .check.done{
   animation: popCkeck 0.40s ease-in-out;
@@ -180,7 +185,43 @@
   background: #4ade80;
 }
 
-
+.info_tarea{
+ grid-column: 1 /span 2;
+ padding: 8px;
+ border-radius: 8px;
+ box-shadow: 0 0 10px gainsboro;
+ height: 200px;
+ margin-top: 20px;
+}
+.body_tarea{
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+}
+.viso_caja_vacia{
+  grid-column: 2/ span 2 ;
+  height: 190px;
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  border-radius: 8px;
+  border: 2px dashed rgb(255, 0, 140);
+  background-color: #8cc7d41e;
+}
+.caja{
+  width: 90px;
+  height: 90px;
+  background: linear-gradient(60deg, #ff8a00, #e52e71);
+  cursor: pointer;
+  padding: 6px;
+  margin-top: 10px;
+  border-radius: 50%;
+  text-align: center;
+}
+.caja i{
+  font-size: 30px;
+  color: #020580;
+  margin-top: 30px;
+}
 .delete-btn {
   background: rebeccapurple;
   border: none;
@@ -190,7 +231,86 @@
   color: rgb(255, 0, 140);
 }
 
+.Editar_targeta{
+  display: none;
+}
+.Editar_targeta.active{
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 17;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(6px);
+  display: flex;
+  justify-content: center;
+}
+.cuerpo_modal{
+  position: relative;
+  overflow: hidden;
+  margin-top: 50px;
+  padding-top: 50px;
+  width: 600px;
+  height: 500px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 8px;
+  box-shadow: 4px 9px 10px slateblue;
+  animation: intro 0.80s ease-in-out;
+}
+.header-editar{
+  display: grid;
+  grid-template-columns: 93% auto;
+  top: 0;
+  padding: 8px;
+  position: absolute;
+  background: linear-gradient(to right, #d6f1f8, #8ce9fa);
+  width: 100%;
+  box-shadow: 0 3px 5px rgba(220, 220, 220, 0.63);
+  z-index: 17;
+}
+.header-editar p{
+  font-size: 14px;
+  color: #818181;
+  margin: 3px;
+  font-weight: bold;
+}
+.Closeeditar{
+  font-size: 25px;
+
+}
+.footer-editar{
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  bottom: 0;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 -4px 5px rgba(220, 220, 220, 0.63);
+}
+.contenido-editar{
+  padding: 8px;
+  overflow-y: auto;
+  height: 300px;
+}
+.input-editar input{
+  width: 97%;
+  padding: 12px 6px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #818181;
+  border: none;
+}
+
 /*Animaciones*/
+@keyframes intro{
+  from{
+    opacity: 0;
+    transform: scale(.8);
+  }
+  to{
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 @keyframes fadeUp{
   from{
     opacity: 0;
@@ -222,6 +342,7 @@
 }
 
 
+
 /*Resposing*/
 
 @media (max-width: 470px){
@@ -231,7 +352,7 @@
 }
 .contenedor{
   gap: 0px;
-  padding: 8px;
+  padding: 16px;
   grid-template-columns: repeat(1, 1fr);
 }
 #addBtn{
