--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -72,7 +72,7 @@
   display: flex;
   gap: 8px;
   margin-top: 16rem;
-  background: #d1d3ff;
+  background: #c7c9fa;
   padding: 3px;
   border-radius: 6px;
 }
@@ -88,7 +88,7 @@
   grid-template-columns: repeat(2, 1fr);
   position: relative;
   padding: 20px;
-  height: 93vh;
+  height: 100vh;
   overflow-y: auto;
 }
 
@@ -149,6 +149,7 @@
 #task-input{
   position: relative;
   display: flex;
+  margin-block-end: 14px;
 }
 
 #task-input input{
@@ -156,7 +157,7 @@
   border-top-left-radius: 12px;
   border-end-start-radius: 12px;
   background:rgba(249, 254, 255, 0.788);
-  width: 79% ;
+  width: 100% ;
   border:  2px solid rgb(113, 194, 226);
   transition:  0.30s ease-in-out;
   font-size: 15px;
@@ -168,7 +169,7 @@
   background-color: rgb(255, 217, 0);
   border-top-right-radius: 12px;
   border-end-end-radius: 12px;
-  width: 10%;
+  
   cursor: pointer;
 }
 #taskList{
@@ -202,8 +203,119 @@
 }
 #task-input input:focus {
   outline: none;
-  box-shadow: 0 4px 6px #b0d0ffd2;
+  box-shadow: 0 6px 10px #b0d0ffd2;
 }
+/*Categorias*/
+.main-cont-categoria{
+  position:relative;
+  width:100% ;
+  height: 100px;
+  margin-block-end: 80px;
+}
+.Categoria.active{
+   height: 400px;
+}
+.Categoria{
+   transition: 0.30s ease-out;
+  width:100% ;
+  height: 160px;
+  box-shadow: 0 0 10px rgba(220, 220, 220, 0.651);
+  border-radius: 8px;
+  padding: 10px;
+  z-index: 15;
+  overflow: hidden;
+  background-color: rgb(237, 241, 241);
+}
+.Categoria h4{
+  margin: 0;
+}
+.contenedor_categoria{
+  display:grid;
+  grid-template-columns: repeat(4, auto);
+  gap: 5px;
+}
+.options{
+  cursor: pointer;
+  padding: 4px 8px;
+  border-radius: 10px;
+  margin-top: 5px;
+  color: #818181;
+  border:  2px solid rgb(87, 154, 255);
+  transition: 0.50s ease-in-out;
+  font-weight: bold;
+}
+.options:hover{
+  background-color: #9421ff2f;
+  color: #ee596d;
+  transform: scale(1.03);
+}
+
+/*Horario*/
+.horaio_día{
+  margin-top: 12px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 16px;
+  margin-block-end: 26px;
+}
+.tiempo{
+  border-radius: 10px;
+  background: rgb(0, 0, 207);
+  padding: 10px;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  font-weight: bold;
+  color: #8ce9fa;
+  cursor: pointer;
+}
+.tiempo p{
+  margin: 0;
+}
+.tiempo i{
+  font-size: 25px;
+  color: #4ade80;
+}
+
+.importancia{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  gap: 12px;
+}
+.proridad{
+  margin-top: 9px ;
+  padding: 8px;
+  color: #494949;
+  background: white;
+  box-shadow: 0 0 6px  rgb(190, 190, 190);
+  border-radius: 10px;
+  cursor: pointer;
+}
+.agregar{
+  width: 100%;
+  margin-top: 30px;
+  padding: 10px;
+  display: grid;
+  justify-content: center;
+}
+
+#Guadar-btn{
+  padding: 12px 60px;
+  background: linear-gradient(60deg, #596fee, #eb236c,#ff8a00);
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #ffffff;
+  transition: 0.40s ease-in-out;
+  cursor: pointer;
+}
+#Guadar-btn:hover{
+  transform: scale(1.04);
+
+}
+/*=====================================*/
 .List_check{
   padding: 20px;
   border-radius: 8px;
@@ -472,15 +584,20 @@
   width: 100%;
 }
 
+.contenedor_categoria{
+  grid-template-columns: repeat(2, auto);
+}
+.Categoria.active{
+   height: 480px;
+}
 .targetas_info{
-  margin-top: 20px;
+  margin-top: 330px;
   grid-column: 1 / span 2;
 }
 .carousel {
   margin-left: 10%;
   width: 240px;
   height: 400px;
-
 }
 
 /* tarjetas */
