--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -18,17 +18,104 @@
   gap: 10px;
 }
 #Titulo_app{
-  font-size: 40px;
+  margin: 0 0 28px 0;
+  font-size: 30px;
   animation: aparecer 0.60s ease-in-out;
-  background: linear-gradient(60deg, #596fee, #eb236c,#ff8a00);
+  background: linear-gradient(40deg, #596fee, #eb236c,#ff8a00);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+/*Barra superior principal*/
+.Barra_Superior_principal{
+  height: 50px;
+  box-shadow: 4px 0 10px gainsboro;
+  z-index: 28;
+  padding: 6px;
+  position: relative;
+  display: grid;
+  grid-template-columns: 80% 12% 4%;
+}
+.Settings_System{
+  position: relative;
+  cursor: pointer;
+}
+.themes{
+  position: relative;
+  cursor: pointer;
+}
+.themes i, .Settings_System i {
+  font-size: 22px;
+  background:  var(--color-icons);
+  padding-top: 10px;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.themes i{
+  padding-left: 60px;
+}
+.content_theme{
+  position: relative;
+  display: none;
+}
+.content_theme.active{
+  display: block;
+}
+.nav_themes.active{
+  animation: themeAnimation 0.16s ease-in-out;
+}
+.nav_themes{
+  position: absolute;
+  margin-top: 30px;
+  height: 300px;
+  width: 210px;
+  border-radius: 12px;
+  box-shadow: 0 0 6px gainsboro;
+  background: white;
+  margin-right: 200px;
+  padding: 20px;
+}
+.nav_themes ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.nav_themes li{
+  margin-block-end: 30px;
+}
+.nav_themes p{
+  padding: 0;
+  margin: 0;
+}
+#Default_light, 
+#Default_dark,
+#System_theme{
+  display: flex;
+  gap: 20px;
+  border-radius: 12px;
+  box-shadow: 0 0 5px gainsboro;
+  padding: 12px 8px;
+  justify-content: center;
+  transition: 0.16s ease-out;
+}
+#Default_light i, 
+#Default_dark i,
+#System_theme i{
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+#Default_light:hover, 
+#Default_dark:hover,
+#System_theme:hover{
+  background-color: #020580;
+  color: #f5fdff;
+  transform: scale(1.03);
 }
 /*Menu*/
 .nav-main{
   box-shadow: 0px 0px 8px rgba(199, 199, 199, 0.568); 
   height: 100vh;
-  background: linear-gradient(90deg,#f0f0f0, #e8e7ff ) ;
+  background: linear-gradient(40deg,#f0f0f0, #e8e7ff ) ;
 }
 .nav_menu{
   padding: 15px 6px 6px 6px;
@@ -85,10 +172,10 @@
 /*===========================================*/
 .contenedor{
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   position: relative;
   padding: 20px;
-  height: 100vh;
+  height: 93vh;
   overflow-y: auto;
 }
 
@@ -149,7 +236,8 @@
 #task-input{
   position: relative;
   display: flex;
-  margin-block-end: 14px;
+  margin-top: 20px;
+  margin-block-end: 30px;
 }
 
 #task-input input{
@@ -157,6 +245,7 @@
   border-top-left-radius: 12px;
   border-end-start-radius: 12px;
   background:rgba(249, 254, 255, 0.788);
+  margin-left: 160px;
   width: 100% ;
   border:  2px solid rgb(113, 194, 226);
   transition:  0.30s ease-in-out;
@@ -166,15 +255,16 @@
 
 #addBtn{
   position: relative;
-  background-color: rgb(255, 217, 0);
+  background: linear-gradient(60deg, #596fee, #eb236c,#ff8a00);
   border-top-right-radius: 12px;
   border-end-end-radius: 12px;
-  
+  margin-right: 220px;
   cursor: pointer;
 }
 #taskList{
-  max-height: 400px;
+  max-height: 580px;
   overflow-y: auto;
+  padding: 30px;
 }
 #taskList::-webkit-scrollbar{
   width: 4px;
@@ -192,7 +282,7 @@
  padding: 15px 18px;
  font-size: 26px;
  transition: 0.40s ease-in-out;
- color: rgb(1, 63, 87);
+ color: rgb(255, 255, 255);
 }
 #task-input{
  animation:  fadeUp 0.80s ease-in-out;
@@ -210,34 +300,40 @@
   position:relative;
   width:100% ;
   height: 100px;
-  margin-block-end: 80px;
+  margin-block-end: 20px;
 }
 .Categoria.active{
-   height: 400px;
+   height: 600px;
 }
 .Categoria{
-   transition: 0.30s ease-out;
+  position: absolute;
+  transition: 0.30s ease-out;
   width:100% ;
-  height: 160px;
+  height: 90px;
   box-shadow: 0 0 10px rgba(220, 220, 220, 0.651);
   border-radius: 8px;
   padding: 10px;
-  z-index: 15;
+  z-index: 20;
   overflow: hidden;
-  background-color: rgb(237, 241, 241);
+  background-color: rgb(255, 255, 255);
 }
+.contenedor_categoria .options.selected {
+  background: #2125ffa1;
+  color: #b5eff7;
+}
+
 .Categoria h4{
   margin: 0;
 }
 .contenedor_categoria{
   display:grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(9, auto);
   gap: 5px;
 }
 .options{
   cursor: pointer;
-  padding: 4px 8px;
-  border-radius: 10px;
+  padding: 10px 8px;
+  border-radius: 28px;
   margin-top: 5px;
   color: #818181;
   border:  2px solid rgb(87, 154, 255);
@@ -245,10 +341,36 @@
   font-weight: bold;
 }
 .options:hover{
-  background-color: #9421ff2f;
-  color: #ee596d;
+  background-color: #2125ffa1;
+  color: #b5eff7;
   transform: scale(1.03);
 }
+.CateIcons{
+  padding: 4px;
+  border-radius: 6px;
+}
+.CateIcons{
+  font-size: 19px;
+}
+.task-cat{
+  background: linear-gradient(40deg, rgb(250, 252, 255), rgb(236, 236, 236), rgb(247, 247, 248) );
+  box-shadow: 0 0 10px gainsboro;
+  font-size: 15px;
+  border-radius: 12px;
+  padding-top: 4px;
+  font-weight: bold;
+  color: #069caf;
+  text-align: center;
+}
+.task-pro{
+  font-size: 15px;
+  padding: 12px 12px;
+  border-radius: 12px;
+  font-weight: bold;
+  text-align: center;
+  border-bottom: 2px dashed gainsboro;
+}
+
 
 /*Horario*/
 .horaio_día{
@@ -260,21 +382,22 @@
 }
 .tiempo{
   border-radius: 10px;
-  background: rgb(0, 0, 207);
+  background: #6c80f5;
   padding: 10px;
   display: flex;
   gap: 10px;
   justify-content: center;
   font-weight: bold;
-  color: #8ce9fa;
+  color: #ffffff;
   cursor: pointer;
 }
 .tiempo p{
   margin: 0;
+  padding-top: 3px;
 }
 .tiempo i{
   font-size: 25px;
-  color: #4ade80;
+   color: #77efff;
 }
 
 .importancia{
@@ -325,15 +448,15 @@
 }
 .task-item{
   display: grid;
-  grid-template-columns: 2% 92% auto;
+  grid-template-columns: 2% 50% 20% auto 2%;
+  box-shadow: 0 0 10px rgba(204, 204, 204, 0.781);
   gap: 20px;
+  transition: 0.90s ease-out;
   padding: 12px;
   font-size: 18px;
   margin-bottom: 8px;
   border-radius: 8px;
-}
-.editar_item{
-  grid-column: 1 / span 3;
+  margin-block-end: 15px;
 }
 
 .task-text {
@@ -347,26 +470,42 @@
   animation: popCkeck2 0.40s ease-in-out;
 }
 
-.check{
-  flex-shrink: 1;
-  width: 20px;
-  height: 20px;
-}
-.check.done{
-  animation: popCkeck 0.40s ease-in-out;
-}
-.check:checked {
-  border-color: #4ade80;
-  background: #4ade80;
+.check {
+  appearance: none;   /* Quita el estilo del sistema */
+  -webkit-appearance: none;
+  width: 22px;
+  height: 22px;
+  border: 2px solid #ccc;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: 0.25s ease;
+  position: relative;
 }
 
-.info_tarea{
- grid-column: 1 /span 2;
- padding: 8px;
- border-radius: 8px;
- box-shadow: 0 0 10px gainsboro;
- margin-top: 20px;
+/* Al pasar el mouse */
+.check:hover {
+  border-color: #4a60de;
 }
+
+/* Estilo cuando está marcado */
+.check:checked {
+  background: #4a59de;
+  border-color: #4ad9de;
+}
+
+/* ✔ icono real */
+.check:checked::before {
+  content: "✔";
+  color: white;
+  font-size: 14px;
+  position: absolute;
+  top: -2px;
+  left: 4px;
+}
+.info_tarea{
+  margin-top: 20px;
+}
+
 .body_tarea{
   display: grid;
   grid-template-columns: auto auto auto auto;
@@ -437,13 +576,28 @@
   cursor: pointer;
   color: rgb(255, 0, 140);
 }
+.openEditar{
+  font-size: 20px;
+  padding-top: 12px;
+  cursor: pointer;
+  color: #001aff;
 
+}
+.editar_item{
+  display: none;
+  background-color: #020580;
+}
+.editar_item.active{
+  display: block;
+}
 .Editar_targeta{
   display: none;
 }
 .Editar_targeta.active{
   display: block;
-  position: absolute;
+  position: fixed;
+  top:0;
+  left:0;
   width: 100%;
   height: 100%;
   z-index: 17;
@@ -507,7 +661,7 @@
   border: none;
 }
 
-/*Animaciones*/
+/*=============== Animaciones ====================*/
 @keyframes intro{
   from{
     opacity: 0;
@@ -516,6 +670,17 @@
   to{
     opacity: 1;
     transform: scale(1);
+  }
+}
+@keyframes themeAnimation {
+ 
+  from{
+    transform: scale(0.96);
+    opacity: 0;
+  }
+   to{
+    transform: scale(1);
+    opacity: 1;
   }
 }
 @keyframes aparecer{
@@ -559,7 +724,122 @@
 @keyframes popCkeck2{
   40% {transform: scale(1.02);}
 }
+/* Fondo del modal */
+.modal {
+  position: fixed;
+  z-index: 29;
+  inset: 0;
+  background: rgba(0,0,0,0.4);
+  backdrop-filter: blur(5px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .35s ease;
+}
 
+/* Mostrar modal */
+.modal.show {
+  opacity: 1;
+  pointer-events: all;
+}
+
+/* Caja del modal */
+.modal-content {
+  background: transparent;
+  padding: 40px 50px;
+  border-radius: 20px;
+  text-align: center;
+  background: linear-gradient(100deg,  #0026ff, #f7186a, #020580);
+  background-size: 600% 600%;
+  animation: mover 4s ease infinite;
+}
+.backgraud-content{
+    transform: scale(.6);
+    opacity: 0;
+    animation: modalIn .4s ease forwards;
+    border-radius: 20px;
+}
+/* Animación entrada modal */
+@keyframes modalIn {
+  0% { transform: scale(.6) translateY(20px); opacity: 0; }
+  100% { transform: scale(1) translateY(0); opacity: 1; }
+}
+
+/* Ícono animado */
+.check-anim {
+  background: linear-gradient(30deg, #a9d2dd, #c3f4fc);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 6px solid #0084ff;
+  position: relative;
+  margin: auto;
+  animation: pop 0.10s ease forwards 0.1s;
+}
+
+/* Check en pseudo-elemento */
+.check-anim::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 50px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  border-bottom-left-radius: 9px;
+  border-right: 8px solid #001aff;
+  border-bottom: 8px solid #ae00ff;
+  transform: rotate(38deg) translate(8px, -5px);
+  top: 10px;
+  left: 18px;
+  opacity: 0;
+  animation: drawCheck 0.4s ease forwards 0.2s;
+}
+
+/* Animación círculo */
+@keyframes pop {
+  0% { transform: scale(.4); opacity: 0; }
+  70% { transform: scale(1.2); }
+  100% { transform: scale(1); opacity: 1; }
+
+}
+
+/* Dibujar el check */
+@keyframes drawCheck {
+  0% { opacity: 0; transform: rotate(38deg) translate(8px, -5px) scale(0.90); }
+  90% { opacity: 0.5; transform: rotate(38deg) translate(8px, -5px) scale(1.09); }
+  100% { opacity: 1; transform: rotate(38deg) translate(8px, -5px) scale(1); }
+}
+
+@keyframes mover {
+  0% { background-position: 0% 50%; }
+  60% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+@keyframes Titulo-fade{
+  to{
+    transform: scale(1);
+    opacity: 1;
+  }
+  from{
+    transform: scale(1.3);
+    opacity: 0.5;
+  }
+}
+
+
+/* Título */
+.titulo-modal {
+  margin-top: 20px;
+  padding: 5px;
+  border-radius: 12px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #2ed5ff;
+  animation: Titulo-fade .90s ease-in-out;
+}
+/*=================================================*/
 
 
 /*Resposing*/
@@ -591,8 +871,8 @@
    height: 480px;
 }
 .targetas_info{
-  margin-top: 330px;
-  grid-column: 1 / span 2;
+  margin-top: 340px;
+  grid-column: 1 / span 1;
 }
 .carousel {
   margin-left: 10%;
