--- a/docs/assets/css/login.css
+++ b/docs/assets/css/login.css
@@ -7,7 +7,8 @@
     font-family: 'Roboto', 'sans-serif', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 body{
-    background:#320153;
+    background:#cccfeb;
+    background-size: 600% 600%;
 }
 
 .contenedor{
@@ -16,36 +17,127 @@ body{
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
 }
-
+.container_movil{
+    display: none;
+}
 .Cuadro_info{
-    padding: 30px;
-    background: rgb(12, 1, 112);
-    height: 81vh;
+    padding: 40px;
+    background: rgb(0, 44, 94);
+    height: 78vh;
     border-top-left-radius:6px ;
     border-end-start-radius:6px ;
     box-shadow: 4px 2px 10px #6057e6;
     color: white;
 }
 .Cuadro_info h1{
-   background: linear-gradient(40deg, #59eeee, #ff2474,#ff8a00);
+   background: linear-gradient(80deg, #00e1ff, #ff0095,#92c5ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 46px;
+  background-size: 300% 300%;
+  animation: mover 10s ease infinite;
 }
+.animation-titulo{
+    animation: zoom 0.80s ease-in-out;
+}
+.description{
+    margin-top: 10px;
+    font-size: 16px;
+    line-height: 1.4;
+}
+.funciones_descrition h4{
+    text-align: center;
+    margin-top: 5px;
+}
+.microcopy{
+    position: relative;
+    padding: 40px 0;
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    border-radius: 5px;
+}
+.cleck{
+    color: #00e1ff;
+    font-size: 40px;
+    display: grid;
+    padding: 0 10px;
+    justify-content: center;
+
+}
+.cleck i{
+    border-radius: 50%;
+    height: 56px;
+    width: 70px;
+    padding-top: 14px;
+    text-align: center;
+
+}
+.icon{
+    border: 3px dashed #00e1ff;
+    background: #000c74;
+}
+.icon2{
+    color: #00ffb3;
+    border: 3px solid #7bff00;
+    background: #02c01b;
+}
+.icon3{
+    border: 3px dashed #eb236c;
+    color: #e52e71;
+    background:#dffaf8 ;
+}
+.funciones_descrition{
+    background: rgb(0, 24, 71);
+    border-radius: 10px;
+    height: 200px;
+    transition: 0.40s ease-in-out;
+    padding: 8px;
+}
+.funciones_descrition h4{
+    color: #815eff;
+}
+.letf_box:hover, .right_box:hover{
+    transform: scale(1.09);
+}
+.center_box{
+    height: 240px;
+    margin-top: -20px;
+}
+.center_box:hover{
+    transform: scale(1.09);
+}
+.text{
+    padding-top: 10px;
+    color: #d8d7d7;
+    font-size: 14px;
+    text-align: center;
+}
+/*=====================================*/
 .login_contenedor{
-    padding: 60px 50px;
+    padding: 30px 50px;
     background:white;
     border-top-right-radius:6px ;
     border-bottom-right-radius:6px ;
     box-shadow: 4px 4px 10px #6057e6; 
     position: relative;
 }
+#header_login{
+    display: flex;
+    gap: 8px;
+}
+ img{
+   width: 50px;
+   height: 50px;
+}
 .login_contenedor h2{ 
-   background: linear-gradient(40deg, #596fee, #eb236c,#ff8a00);
+   background: linear-gradient(40deg, #4c00ff, #4123eb,#00e1ff);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; 
     padding: 10px 0; 
     font-size: 36px;
+    transform-style: preserve-3d;
 }
 #sesion-title{
      animation: fade-intro 0.40s ease-in-out;
@@ -60,13 +152,24 @@ body{
     left: 40vh;
     text-align: center;
     text-decoration: none;
-    color: #363636;
-
-    
+    color: #363636; 
 }
 .login_contenedor a{
      text-decoration: none;
      color: #363636;
+}
+.inputs-layout{
+    display: grid;
+    grid-template-columns: 92% auto;
+    row-gap: 9px;
+}
+.inputs-layout label{
+    grid-column: 1 /span 2;
+    animation: fade 0.40s ease-in-out;
+    margin-top: 18px;
+}
+#in1{
+    margin-top: 20px;
 }
 .inputs-layout input{
     padding: 10px 6px;
@@ -81,12 +184,7 @@ body{
   outline: none;
   box-shadow: 0 0 10px #5957e6be; 
 }
-.inputs-layout{
-    margin-top: 1cqi;
-    display: grid;
-    grid-template-columns: 92% auto;
-    row-gap: 20px;
-}
+
 .inputs-layout i{
     padding: 8px;
     font-size: 20px;
@@ -101,7 +199,7 @@ body{
     padding: 10px 8px;
     width: 100%;
     border: none;
-    background: linear-gradient(60deg, #596fee, #eb236c,#ff8a00);
+    background: linear-gradient(60deg, #596fee, #eb236c);
     color: white;
     font-weight: bold;
     font-size: 14px;
@@ -120,7 +218,20 @@ body{
 @keyframes mover {
   0% { background-position: 0% 50%; }
   60% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
+  100% { background-position: 0% 90%; }
+}
+
+@keyframes zoom{
+    from{
+        opacity: 0;
+        transform: scale(0.90) translateX(10px);
+        
+    }
+    to{
+        opacity: 1;
+        transform:scale(1) translateY(0px);;
+        
+    }
 }
 
 @keyframes fade-intro{
@@ -145,4 +256,104 @@ body{
         transform: translateY(0);
       
     }
+}
+
+
+/*reponsing*/
+@media (max-width: 470px){
+.contenedor{
+    padding: 0 0;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+}
+.container_pc{
+    display: none;
+}
+.container_movil{
+    display: block;
+}
+.login_contenedor{
+    height: 600px;
+    border-radius: 0px;
+}
+#header_login{
+    margin-block-end: 20px;
+    justify-content: center;
+}
+ img{
+   width: 40px;
+   height: 40px;
+}
+.login_contenedor h2{ 
+   background: linear-gradient(40deg, #4c00ff, #4123eb,#ff00b3);
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent; 
+    padding: 3px 0;
+    font-size: 28px;
+    transform-style: preserve-3d;
+}
+.Cuadro_info h1{
+   background: linear-gradient(80deg, #00e1ff, #ff0095,#92c5ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 38px;
+  background-size: 300% 300%;
+  animation: mover 10s ease infinite;
+}
+.inputs-layout{
+    grid-template-columns: 85% auto;
+}
+.credenciales{
+    margin-block-end:40px;
+}
+.Cuadro_info{
+    height: 100%;
+    border-radius: 0px;
+
+}
+.cleck{
+    margin-top: 20px;
+
+}
+.microcopy{
+    grid-template-columns: repeat(1, 1fr);
+    gap: 50px;
+    border-radius: 5px;
+}
+
+.funciones_descrition h4{
+    color: #815eff;
+}
+
+.center_box{
+    height: 240px;
+    margin-top: -20px;
+}
+
+.text{
+    padding-top: 10px;
+    color: #f7f7f7;
+    font-size: 14px;
+    text-align: center;
+}
+#AppSmartTansks{
+    position: absolute;
+    bottom: 20px;
+    left: 24vh;
+    text-align: center;
+    text-decoration: none;
+    color: #363636; 
+}
+.footer{
+   margin-top: 70px;
+   margin-left: 68px;
+   position: absolute;
+   text-align: center;
+}
+
+#SmartTansks{
+    text-decoration: none;
+    color: white;
+}
+
 }
