Integro cambios en la autenticación y confirmación de password

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -34,6 +34,7 @@
   position: relative;
   display: grid;
   grid-template-columns: auto 40%;
+  gap: 10px;
 }
 .tasksProyecAll h2{
   margin: 8px 0 0 0;
@@ -92,7 +93,7 @@
 .Saludo_noticias{
   height: 100px;
   border-radius: 12px;
-  background-color: #5a6afc;
+  background: linear-gradient(50deg, rgb(133, 131, 255), rgb(62, 59, 252));
   padding: 15px;
   display: grid;
   grid-template-columns: 70% auto;
@@ -105,6 +106,11 @@
 .Saludo_noticias p{
   margin: 0;
   font-size: 14px;
+}
+#estadoSystem{
+  margin-top: 10px;
+  color: rgba(245, 245, 245, 0.815);
+  font-size: 15px;
 }
 .infor_Tareas_estado{
   padding: 12px 0;
@@ -120,33 +126,109 @@
 .CantTasksAdd button{
   background: transparent;
   border-radius: 50%;
-  border: 2px solid rgb(255, 0, 106);
-  color: #eb236c;
+  border: 2px solid rgb(0, 230, 50);
+  background: #eaeaff;
+  color: #31d100;
   font-weight: bold;
   height: 40px;
 }
-.CantTasksAdd p{
-  margin: 0;
+.CantTasksAdd h5{
+  margin: 6px 0 0 0;
+  color: #505050;
 }
 /*==================================*/
-.Settings_System{
-  position: relative;
-  cursor: pointer;
+.contanier_settinRigth{
+  background-color: #f4f4fa;
+  border-radius: 12px;
+  padding: 6px;
+  display: grid;
+  grid-template-columns: 70% auto;
+  gap: 6px;
+
+}
+.candTasks{
+  border-radius: 12px;
+  background-color: #ffffff;
+  padding: 5px;
+}
+.icoCantidad{
+  background-color: #ffffff;
+  border-radius: 12px;
+  text-align: center;
+  color: #00d9ff;
+  height: 60%;
+  margin-block-end: 6px;
+  padding: 5px 0;
+}
+.icoCantidad i{
+  border: 2px solid #00d9ff;
+  font-size: 20px;
+  padding: 6px;
+  border-radius: 50%;
+}
+.cantidadTareas{
+  display: flex;
+  gap: 4px;
+  justify-content: center;
+}
+.cantidadTareas p{
+  margin: 0;
+}
+.dateNow{
+border-radius: 12px;
+background-color: #ffffff;
+height: 40px;
+display: grid;
+grid-template-columns: 15% auto;
+padding: 5px;
+height: 50px;
+}
+.day{
+  padding: 8px 6px;
+  border-radius: 14px;
+  border: 1px solid gainsboro;
+  text-align: center;
+  font-weight: bold;
+  background: #00003d;
+  color: rgb(255, 255, 255);
+}
+.day p{
+  margin: 0;
+}
+.dateNow h3{
+  margin: 0;
+  margin-top: 8px;
+  margin-left: 6px;
+
+}
+#tasksOptions button{
+  padding-top: 10px;
+  background: transparent;
+  border: none;
+  font-size: 14px;
+  cursor:pointer;
+}
+#tasksOptions  button i{
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
+  margin-left: 16px;
 }
 .themes{
   position: relative;
   cursor: pointer;
+  display: flex;
 }
 .themes i, .Settings_System i {
-  font-size: 22px;
-  background:  var(--color-icons);
+
+  font-size: 18px;
+  color: #525252;
   padding-top: 10px;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 .themes i{
-  padding-left: 60px;
+  padding-left: 14px;
 }
+.themes p{margin: 0; font-size: 14px; padding-top: 10px; padding-left: 4px;}
 .content_theme{
   position: relative;
   display: none;
